Middle/src/it/dani/selfhome/listener/parser/DFLiteParser.java
// Generated from C:/Users/Daniele/Documents/MEGA/Progetti/SelfHome/New/SelfHome/Middle/grammar\DFLite.g4 by ANTLR 4.9.2
package it.dani.selfhome.listener.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DFLiteParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		TIMESELECTOR=18, SEL=19, END_COMMAND=20, GRAPH_BRACKET_OP=21, GRAPH_BRACKET_CL=22, 
		ROUND_BRACKET_OP=23, ROUND_BRACKET_CL=24, NOT=25, SUM=26, SUB=27, MUL=28, 
		DIV=29, LOGIC_OR=30, LOGIC_AND=31, COMP_LT=32, COMP_GT=33, COMP_LE=34, 
		COMP_GE=35, COMP_EE=36, NUMBER=37, WORD=38, SPACE=39, NL=40, WS=41;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_ifStatement = 2, RULE_block = 3, 
		RULE_filter = 4, RULE_lineCommand = 5, RULE_separator = 6, RULE_logicOperatorOr = 7, 
		RULE_logicOperatorAnd = 8, RULE_comparator = 9, RULE_sum = 10, RULE_mulDiv = 11, 
		RULE_term = 12, RULE_item = 13, RULE_command = 14, RULE_listCommand = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "ifStatement", "block", "filter", "lineCommand", 
			"separator", "logicOperatorOr", "logicOperatorAnd", "comparator", "sum", 
			"mulDiv", "term", "item", "command", "listCommand"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'repeat'", "'if'", "'else'", "'isOneOfThese['", "','", "']'", 
			"'GET'", "'SET'", "'TGL'", "'NGR'", "'DGR'", "'ADG'", "'DDG'", "'sleep'", 
			"'LST'", "'LGR'", "'LDG'", null, null, "';'", "'{'", "'}'", "'('", "')'", 
			"'!'", "'+'", "'-'", "'*'", "'/'", "'||'", "'&&'", "'<'", "'>'", "'<='", 
			"'>='", "'=='", null, null, "' '", "'\n'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "TIMESELECTOR", "SEL", "END_COMMAND", 
			"GRAPH_BRACKET_OP", "GRAPH_BRACKET_CL", "ROUND_BRACKET_OP", "ROUND_BRACKET_CL", 
			"NOT", "SUM", "SUB", "MUL", "DIV", "LOGIC_OR", "LOGIC_AND", "COMP_LT", 
			"COMP_GT", "COMP_LE", "COMP_GE", "COMP_EE", "NUMBER", "WORD", "SPACE", 
			"NL", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DFLite.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DFLiteParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	 
		public ProgramContext() { }
		public void copyFrom(ProgramContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ProgramStatementContext extends ProgramContext {
		public StatementContext s;
		public ListCommandContext l;
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<ListCommandContext> listCommand() {
			return getRuleContexts(ListCommandContext.class);
		}
		public ListCommandContext listCommand(int i) {
			return getRuleContext(ListCommandContext.class,i);
		}
		public List<SeparatorContext> separator() {
			return getRuleContexts(SeparatorContext.class);
		}
		public SeparatorContext separator(int i) {
			return getRuleContext(SeparatorContext.class,i);
		}
		public ProgramStatementContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DFLiteVisitor ) return ((DFLiteVisitor<? extends T>)visitor).visitProgramStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			_localctx = new ProgramStatementContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__3) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << ROUND_BRACKET_OP) | (1L << NOT) | (1L << NUMBER))) != 0)) {
				{
				{
				setState(34);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__0:
				case T__1:
				case T__3:
				case T__6:
				case T__7:
				case T__8:
				case T__9:
				case T__10:
				case T__11:
				case T__12:
				case T__13:
				case ROUND_BRACKET_OP:
				case NOT:
				case NUMBER:
					{
					setState(32);
					((ProgramStatementContext)_localctx).s = statement();
					}
					break;
				case T__14:
				case T__15:
				case T__16:
					{
					setState(33);
					((ProgramStatementContext)_localctx).l = listCommand();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(39);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SPACE || _la==NL) {
					{
					{
					setState(36);
					separator();
					}
					}
					setState(41);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(46);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StatementRepeatContext extends StatementContext {
		public FilterContext f;
		public BlockContext b;
		public TerminalNode ROUND_BRACKET_OP() { return getToken(DFLiteParser.ROUND_BRACKET_OP, 0); }
		public TerminalNode ROUND_BRACKET_CL() { return getToken(DFLiteParser.ROUND_BRACKET_CL, 0); }
		public FilterContext filter() {
			return getRuleContext(FilterContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public List<TerminalNode> SPACE() { return getTokens(DFLiteParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(DFLiteParser.SPACE, i);
		}
		public List<SeparatorContext> separator() {
			return getRuleContexts(SeparatorContext.class);
		}
		public SeparatorContext separator(int i) {
			return getRuleContext(SeparatorContext.class,i);
		}
		public StatementRepeatContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DFLiteVisitor ) return ((DFLiteVisitor<? extends T>)visitor).visitStatementRepeat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StatementLineCommandContext extends StatementContext {
		public LineCommandContext l;
		public LineCommandContext lineCommand() {
			return getRuleContext(LineCommandContext.class,0);
		}
		public StatementLineCommandContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DFLiteVisitor ) return ((DFLiteVisitor<? extends T>)visitor).visitStatementLineCommand(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StatementIfContext extends StatementContext {
		public IfStatementContext i;
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public StatementIfContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DFLiteVisitor ) return ((DFLiteVisitor<? extends T>)visitor).visitStatementIf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		int _la;
		try {
			setState(79);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
			case T__6:
			case T__7:
			case T__8:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case T__13:
			case ROUND_BRACKET_OP:
			case NOT:
			case NUMBER:
				_localctx = new StatementLineCommandContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(47);
				((StatementLineCommandContext)_localctx).l = lineCommand();
				}
				break;
			case T__0:
				_localctx = new StatementRepeatContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(48);
				match(T__0);
				setState(52);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SPACE) {
					{
					{
					setState(49);
					match(SPACE);
					}
					}
					setState(54);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(55);
				match(ROUND_BRACKET_OP);
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SPACE) {
					{
					{
					setState(56);
					match(SPACE);
					}
					}
					setState(61);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(62);
				((StatementRepeatContext)_localctx).f = filter();
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SPACE) {
					{
					{
					setState(63);
					match(SPACE);
					}
					}
					setState(68);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(69);
				match(ROUND_BRACKET_CL);
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SPACE || _la==NL) {
					{
					{
					setState(70);
					separator();
					}
					}
					setState(75);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(76);
				((StatementRepeatContext)_localctx).b = block();
				}
				break;
			case T__1:
				_localctx = new StatementIfContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(78);
				((StatementIfContext)_localctx).i = ifStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStatementContext extends ParserRuleContext {
		public IfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStatement; }
	 
		public IfStatementContext() { }
		public void copyFrom(IfStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IfStatementIfContext extends IfStatementContext {
		public FilterContext f;
		public BlockContext b;
		public IfStatementContext i;
		public BlockContext b2;
		public TerminalNode ROUND_BRACKET_OP() { return getToken(DFLiteParser.ROUND_BRACKET_OP, 0); }
		public TerminalNode ROUND_BRACKET_CL() { return getToken(DFLiteParser.ROUND_BRACKET_CL, 0); }
		public FilterContext filter() {
			return getRuleContext(FilterContext.class,0);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public List<TerminalNode> SPACE() { return getTokens(DFLiteParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(DFLiteParser.SPACE, i);
		}
		public List<SeparatorContext> separator() {
			return getRuleContexts(SeparatorContext.class);
		}
		public SeparatorContext separator(int i) {
			return getRuleContext(SeparatorContext.class,i);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public IfStatementIfContext(IfStatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DFLiteVisitor ) return ((DFLiteVisitor<? extends T>)visitor).visitIfStatementIf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfStatementContext ifStatement() throws RecognitionException {
		IfStatementContext _localctx = new IfStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_ifStatement);
		int _la;
		try {
			_localctx = new IfStatementIfContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(T__1);
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SPACE) {
				{
				{
				setState(82);
				match(SPACE);
				}
				}
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(88);
			match(ROUND_BRACKET_OP);
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SPACE) {
				{
				{
				setState(89);
				match(SPACE);
				}
				}
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(95);
			((IfStatementIfContext)_localctx).f = filter();
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SPACE) {
				{
				{
				setState(96);
				match(SPACE);
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(102);
			match(ROUND_BRACKET_CL);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SPACE || _la==NL) {
				{
				{
				setState(103);
				separator();
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(109);
			((IfStatementIfContext)_localctx).b = block();
			setState(127);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				{
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SPACE || _la==NL) {
					{
					{
					setState(110);
					separator();
					}
					}
					setState(115);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(116);
				match(T__2);
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SPACE || _la==NL) {
					{
					{
					setState(117);
					separator();
					}
					}
					setState(122);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(125);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__1:
					{
					setState(123);
					((IfStatementIfContext)_localctx).i = ifStatement();
					}
					break;
				case GRAPH_BRACKET_OP:
					{
					setState(124);
					((IfStatementIfContext)_localctx).b2 = block();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	 
		public BlockContext() { }
		public void copyFrom(BlockContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BlockStatementContext extends BlockContext {
		public StatementContext sta;
		public TerminalNode GRAPH_BRACKET_OP() { return getToken(DFLiteParser.GRAPH_BRACKET_OP, 0); }
		public TerminalNode GRAPH_BRACKET_CL() { return getToken(DFLiteParser.GRAPH_BRACKET_CL, 0); }
		public List<SeparatorContext> separator() {
			return getRuleContexts(SeparatorContext.class);
		}
		public SeparatorContext separator(int i) {
			return getRuleContext(SeparatorContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockStatementContext(BlockContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DFLiteVisitor ) return ((DFLiteVisitor<? extends T>)visitor).visitBlockStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_block);
		int _la;
		try {
			_localctx = new BlockStatementContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(GRAPH_BRACKET_OP);
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SPACE || _la==NL) {
				{
				{
				setState(130);
				separator();
				}
				}
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__3) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << ROUND_BRACKET_OP) | (1L << NOT) | (1L << NUMBER))) != 0)) {
				{
				{
				setState(136);
				((BlockStatementContext)_localctx).sta = statement();
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SPACE || _la==NL) {
					{
					{
					setState(137);
					separator();
					}
					}
					setState(142);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(148);
			match(GRAPH_BRACKET_CL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FilterContext extends ParserRuleContext {
		public FilterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filter; }
	 
		public FilterContext() { }
		public void copyFrom(FilterContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FilterCompContext extends FilterContext {
		public LogicOperatorOrContext c;
		public LogicOperatorOrContext logicOperatorOr() {
			return getRuleContext(LogicOperatorOrContext.class,0);
		}
		public FilterCompContext(FilterContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DFLiteVisitor ) return ((DFLiteVisitor<? extends T>)visitor).visitFilterComp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FilterContext filter() throws RecognitionException {
		FilterContext _localctx = new FilterContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_filter);
		try {
			_localctx = new FilterCompContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			((FilterCompContext)_localctx).c = logicOperatorOr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineCommandContext extends ParserRuleContext {
		public LineCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lineCommand; }
	 
		public LineCommandContext() { }
		public void copyFrom(LineCommandContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class LineComContext extends LineCommandContext {
		public LogicOperatorOrContext c;
		public TerminalNode END_COMMAND() { return getToken(DFLiteParser.END_COMMAND, 0); }
		public LogicOperatorOrContext logicOperatorOr() {
			return getRuleContext(LogicOperatorOrContext.class,0);
		}
		public LineComContext(LineCommandContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DFLiteVisitor ) return ((DFLiteVisitor<? extends T>)visitor).visitLineCom(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LineCommandContext lineCommand() throws RecognitionException {
		LineCommandContext _localctx = new LineCommandContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_lineCommand);
		try {
			_localctx = new LineComContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			((LineComContext)_localctx).c = logicOperatorOr(0);
			setState(153);
			match(END_COMMAND);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SeparatorContext extends ParserRuleContext {
		public TerminalNode SPACE() { return getToken(DFLiteParser.SPACE, 0); }
		public TerminalNode NL() { return getToken(DFLiteParser.NL, 0); }
		public SeparatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_separator; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DFLiteVisitor ) return ((DFLiteVisitor<? extends T>)visitor).visitSeparator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SeparatorContext separator() throws RecognitionException {
		SeparatorContext _localctx = new SeparatorContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_separator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			_la = _input.LA(1);
			if ( !(_la==SPACE || _la==NL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicOperatorOrContext extends ParserRuleContext {
		public LogicOperatorOrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicOperatorOr; }
	 
		public LogicOperatorOrContext() { }
		public void copyFrom(LogicOperatorOrContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class LogicOrContext extends LogicOperatorOrContext {
		public LogicOperatorOrContext ls;
		public LogicOperatorAndContext ld;
		public TerminalNode LOGIC_OR() { return getToken(DFLiteParser.LOGIC_OR, 0); }
		public LogicOperatorOrContext logicOperatorOr() {
			return getRuleContext(LogicOperatorOrContext.class,0);
		}
		public LogicOperatorAndContext logicOperatorAnd() {
			return getRuleContext(LogicOperatorAndContext.class,0);
		}
		public LogicOrContext(LogicOperatorOrContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DFLiteVisitor ) return ((DFLiteVisitor<? extends T>)visitor).visitLogicOr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LogicLoginAndContext extends LogicOperatorOrContext {
		public LogicOperatorAndContext l;
		public LogicOperatorAndContext logicOperatorAnd() {
			return getRuleContext(LogicOperatorAndContext.class,0);
		}
		public LogicLoginAndContext(LogicOperatorOrContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DFLiteVisitor ) return ((DFLiteVisitor<? extends T>)visitor).visitLogicLoginAnd(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LogicOperatorOrContext logicOperatorOr() throws RecognitionException {
		return logicOperatorOr(0);
	}

	private LogicOperatorOrContext logicOperatorOr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		LogicOperatorOrContext _localctx = new LogicOperatorOrContext(_ctx, _parentState);
		LogicOperatorOrContext _prevctx = _localctx;
		int _startState = 14;
		enterRecursionRule(_localctx, 14, RULE_logicOperatorOr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new LogicLoginAndContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;
